@@ -37,12 +37,12 @@
 /* ----- Constants */
 
 #if defined (CONFIG_SDRAM_BANK0)
-# define RAM_BANK0_START	0x20000000
+# define RAM_BANK0_START	SDRAM_BANK0_PHYS
 # define RAM_BANK0_LENGTH	0x10000000
 #endif
 
 #if defined (CONFIG_SDRAM_BANK1)
-# define RAM_BANK1_START	0x30000000
+# define RAM_BANK1_START	SDRAM_BANK1_PHYS
 # define RAM_BANK1_LENGTH	0x10000000
 #endif
 
