@@ -45,9 +45,9 @@ CONFIG_ARCH_NUMBER_FUNCTION=determine_arch_number
 
 CONFIG_DRIVER_NOR_CFI=y
 
-CONFIG_DRIVER_COMPACTFLASH=y
-CONFIG_DRIVER_FAT=y
-CONFIG_DRIVER_EXT2=y
+#CONFIG_DRIVER_COMPACTFLASH=y
+#CONFIG_DRIVER_FAT=y
+#CONFIG_DRIVER_EXT2=y
 
 #CONFIG_ENV_AUTOBOOT=50
 CONFIG_ENV_REGION_KERNEL=nor:256k+1536k
